--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,10 @@
+dj-database-url==0.4.2
 Django==1.11.1
+djangorestframework==3.6.2
+psycopg2==2.7.1
 pytz==2017.2
+PyYAML==3.12
+requests==2.13.0
+Unipath==1.1
+uwsgi==2.0.15
+yamlreader==3.0.4
